add: 400, 404 error
